Bug 135157 - Warming about changes not applied always appear even when already applied
Summary: Warming about changes not applied always appear even when already applied
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-GeolocationEdit (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-05 17:19 UTC by Fabien
Modified: 2018-03-23 21:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabien 2006-10-05 17:19:53 UTC
Version:            (using KDE KDE 3.5.4)
Installed from:    Ubuntu Packages
OS:                Linux

In the (great) gpssync plugin, there's a dialog window that appears when closing the main gpssync windows (only if we made a modification) :
<<
n picture from the list isn't updated. Do you want really to close this window without apply changes?
>>

The problem is that this window always appears even when I already click on apply button.

Note: there's a typo in this phrase, I think it should be "without applying changes".

PS: it's the latest version from svn (around 15h00 today).
Comment 1 caulier.gilles 2006-10-05 18:28:20 UTC
SVN commit 592756 by cgilles:

Fix disty status when Metadata are written in pictures.

BUG:135157



 M  +2 -0      gpslistviewitem.cpp  


--- trunk/extragear/libs/kipi-plugins/gpssync/gpslistviewitem.cpp #592755:592756
@@ -178,6 +178,8 @@
             setPixmap(1, SmallIcon("ok"));
         else
             setPixmap(1, SmallIcon("cancel"));
+	
+	d->dirty = false;
     }
 }