Fix disty status when Metadata are written in pictures.

BUG:135157


svn path=/trunk/extragear/libs/kipi-plugins/; revision=592756